samples/_failures_safe/1761319759_ae892e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79734f16.c: In function ‘main’:
./samples/SAFE/__tmp_79734f16.c:178:12: error: missing terminating " character
  178 |     printf("Enter expression
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_79734f16.c:178:5: error: expected expression at end of input
  178 |     printf("Enter expression
      |     ^~~~~~
./samples/SAFE/__tmp_79734f16.c:178:5: error: expected declaration or statement at end of input
